# OS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: example.cpp.D15CE7F17FA2EAFF.idx  main.cpp.E0C9FFC5EC137038.idx  myitem.cpp.8C0396FFB8EB95DA.idx  myitem.h.1856C044DD9044FF.idx
apps/: CMakeLists.txt
apps/widgetgallery/: CMakeLists.txt
image/: packages.x86_64  pacman.conf  profiledef.sh
image/efiboot/loader/: loader.conf
image/efiboot/loader/entries/: 01-ignite-os-x86_64-linux.conf
image/grub/: grub.cfg
image/syslinux/: syslinux-linux.cfg  syslinux.cfg
systemui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/igniteui/: CMakeLists.txt  main.cpp  main.qml
ui/: CMakeLists.txt
ui/igniteui/: CMakeLists.txt  myitem.h  qmldir
